--- a/test.css
+++ b/test.css
@@ -13,6 +13,7 @@ h1 {
     font-family: "玉ねぎ楷書激無料版v7改";
     color: white;
     padding: 10px;
+    text-shadow: 2px 2px 10px #ffa340, -2px 2px 10px #ffa340, 2px -2px 10px #ffa340, -2px -2px 10px #ffa340;
 }
 
 .html {
